# nslsii

./: .copier-answers.yml  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  MANIFEST.in  README.md  github_deploy_key_nsls_ii_nslsii.enc  noxfile.py  pixi.toml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test_requirements.txt  versioneer.py
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml  publish-pypi.yml  tests.yml
docs/: conf.py  index.md
docs/source/: release-history.rst
nsls-ii-tools/: _version.py
nsls-ii-tools/common/ipynb/: __init__.py  animation.py
nsls2tools/: _version.py
nsls2tools/common/devices/: eps.py  optics.py
nsls2tools/common/ipynb/: __init__.py  image.py  info.py
nsls2tools/common/ophyd/: eps.py
nsls2tools/csx1/bluesky/: nanop.py  plans.py  qplans.py  suspenders.py  xpcs.py
nsls2tools/csx1/devices/: areadetector.py  devices.py  epu.py  lakeshore.py  optics.py  scaler.py
nsls2tools/csx1/ophyd/: areadetector.py  devices.py  optics.py  scaler.py
nsls2tools/csx1/plans/: nanop.py  qplans.py
nsls2tools/csx1/startup/: __init__.py  accelerator.py  detectors.py  endstation.py  optics.py  settings.py  startup.py  tardis-mu.py
nslsii/: __init__.py  _version.py  ad33.py  batches.py  baton.py  devices.py  epics_utils.py  kafka_utils.py  loggers.py  md_dict.py  proposals.py  re_subs.py  redis_dict.py  temperature_controllers.py  transforms.py  utils.py
nslsii/EPS_devices/: valves_and_shutters.py
nslsii/areadetector/: xspress3.py
nslsii/async/: __init__.py  providers.py
nslsii/commandline/: monitor2kafka.py
nslsii/common/: __init__.py  touchbl.py
nslsii/common/ipynb/: animation.py  info.py  logutils.py  nbviewer.py  touchbl.py
nslsii/csx1/startup/: startup.py
nslsii/detectors/: QEPro.py  maia.py  trigger_mixins.py  utils.py  webcam.py  xspress3.py  xspress3v33.py  zebra.py
nslsii/iocs/: baton.py  caproto_saver.py  epics_motor_ioc_sim.py  epics_motor_record.py  eps_two_state_ioc_sim.py  lakeshore_control.py  lakeshore_ioc_sim.py  lakeshore_temperature.py  motor_group_ioc_sim.py  thermo_sim.py  utils.py
nslsii/iocs/tests/: temperature_controllers_test.py  test_epicsmotor_ioc.py  test_epstwostate_ioc.py
nslsii/motor_devices/: slits.py
nslsii/motors/: delta_tau.py
nslsii/ophyd_async/: __init__.py  providers.py
nslsii/ophyd_async/devices/: __init__.py  rbd9103.py
nslsii/ophydv2/: __init__.py  providers.py
nslsii/plans/: maia.py
nslsii/sync_experiment/: __init__.py  __main__.py  sync_experiment.py
nslsii/sync_redis/: __init__.py  sync_experiment.py  sync_redis.py
nslsii/temperature_controllers/: lakeshore.py
nslsii/tests/: EPS_devices.py  conftest.py  lakeshore_test.py  motor_devices_test.py  temperature_controllers_test.py  test_batches.py  test_baton.py  test_epicsmotor_ioc.py  test_epstwostate_ioc.py  test_ipynb.py  test_kafka_conditional_import.py  test_kafka_configuration.py  test_kafka_publisher.py  test_kafka_publisher_thread.py  test_kafka_queue_thread_publisher.py  test_logutils.py  test_motorgroup_ioc.py  test_ophyd_async_providers.py  test_re_subs.py  test_redis_dict.py  test_redis_integration.py  test_xspress3.py  test_xspress3_hdf5plugin.py  test_xspress3_with_hw.py
nslsii/tests/ophyd_async/: test_ophyd_async_providers.py
scripts/: bitnami-kafka-docker-compose.yml
src/nslsii/: __init__.py  _version.py  _version.pyi  ad33.py  devices.py  transforms.py
src/nslsii/common/: __init__.py
src/nslsii/common/ipynb/: __init__.py  animation.py  info.py  nbviewer.py
src/nslsii/detectors/: trigger_mixins.py  xspress3.py
src/nslsii/iocs/: thermo_sim.py  utils.py
src/nslsii/iocs/tests/: test_epstwostate_ioc.py
src/nslsii/motors/: delta_tau.py
src/nslsii/ophyd_async/: __init__.py
src/nslsii/ophyd_async/devices/: rbd9103.py
src/nslsii/sync_experiment/: __init__.py
src/nslsii/tests/: conftest.py
tests/: test_package.py  test_re_subs.py  test_xspress3_hdf5plugin.py
