[build-system]
requires = ["setuptools>=77", "setuptools_scm[toml]>=7"]
build-backend = "setuptools.build_meta"


[project]
name = "nslsii"
authors = [
  { name = "Jennefer Maldonado", email = "jmaldonad@bnl.gov" },
]
description = "A great package."
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dynamic = ["version"]
dependencies = [
  "appdirs",
  "bluesky-kafka>=0.8.0",
  "bluesky>=1.8.1",
  "caproto",
  "databroker",
  "h5py",
  "httpx",
  "ipython",
  "ipywidgets",
  "ldap3",
  "matplotlib",
  "msgpack >= 1.0.0",
  "msgpack-numpy",
  "numpy",
  "opencv-python",
  "ophyd",
  "ophyd-async",
  "packaging",
  "pillow",
  "psutil",
  "pycryptodome",
  "pyolog",
  "redis",
  "redis-json-dict",
  "requests",
  "setuptools",
  "shortuuid"
]

[project.urls]
Homepage = "https://github.com/NSLS-II/nslsii"
"Bug Tracker" = "https://github.com/NSLS-II/nslsii/issues"
Discussions = "https://github.com/NSLS-II/nslsii/discussions"
Changelog = "https://github.com/NSLS-II/nslsii/releases"


[dependency-groups]
test = [
  "pytest >=6",
  "pytest-cov >=3",
]
dev = [
  { include-group = "test" },
  "attrs>=17.40",
  "codecov",
  "coverage",
  "flake8",
  "ipython",
  "matplotlib",
  "numpydoc",
  "pytest",
  "sphinx",
  "sphinx_rtd_theme",
  "area_detector_handlers",
  "pre-commit",
  "ruff"
]
docs = [
  "sphinx>=7.0",
  "myst_parser>=0.13",
  "sphinx_copybutton",
  "sphinx_autodoc_typehints",
  "furo>=2023.08.17",
]


[tool.setuptools_scm]
write_to = "src/nslsii/_version.py"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = [
  "error",
]
log_cli_level = "INFO"
testpaths = [
  "tests",
]


[tool.coverage]
run.source = ["nslsii"]
report.exclude_also = [
  '\.\.\.',
  'if typing.TYPE_CHECKING:',
]

[tool.mypy]
files = ["src", "tests"]
python_version = "3.9"
warn_unused_configs = true
strict = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "nslsii.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true


[tool.ruff]

[tool.ruff.lint]
extend-select = [
  "ARG",      # flake8-unused-arguments
  "B",        # flake8-bugbear
  "C4",       # flake8-comprehensions
  "EM",       # flake8-errmsg
  "EXE",      # flake8-executable
  "G",        # flake8-logging-format
  "I",        # isort
  "ICN",      # flake8-import-conventions
  "NPY",      # NumPy specific rules
  "PD",       # pandas-vet
  "PGH",      # pygrep-hooks
  "PIE",      # flake8-pie
  "PL",       # pylint
  "PT",       # flake8-pytest-style
  "PTH",      # flake8-use-pathlib
  "RET",      # flake8-return
  "RUF",      # Ruff-specific
  "SIM",      # flake8-simplify
  "T20",      # flake8-print
  "UP",       # pyupgrade
  "YTT",      # flake8-2020
]
ignore = [
  "PLR09",    # Too many <...>
  "PLR2004",  # Magic value used in comparison
]
isort.required-imports = ["from __future__ import annotations"]
# Uncomment if using a _compat.typing backport
# typing-modules = ["nslsii._compat.typing"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20"]
"noxfile.py" = ["T20"]


[tool.pylint]
py-version = "3.9"
ignore-paths = [".*/_version.py"]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.disable = [
  "design",
  "fixme",
  "line-too-long",
  "missing-module-docstring",
  "missing-function-docstring",
  "wrong-import-position",
]
